welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: value lengt is not a member of Array[Int]
  for (i<- 0 to nums.lengt-1)
                     ^